--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@prisma/client": "^5.9.1",
     "@remix-run/css-bundle": "^2.6.0",
     "@remix-run/node": "^2.6.0",
     "@remix-run/react": "^2.6.0",
@@ -20,6 +21,7 @@
     "framer-motion": "^11.0.3",
     "isbot": "^4.1.0",
     "postcss": "^8.4.33",
+    "prisma": "^5.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.1"
@@ -37,6 +39,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.2.4",
+    "prettier-plugin-prisma": "^5.0.0",
     "typescript": "^5.1.6"
   },
   "engines": {
