--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "@remix-run/node": "^2.5.1",
     "@remix-run/react": "^2.5.1",
     "@remix-run/serve": "^2.5.1",
     "isbot": "^4.1.0",
     "match-sorter": "^6.3.1",
+    "prisma": "^5.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sort-by": "^1.2.0",
